<resources>
    <string name="app_name">Open Weather</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Settings</string>
    <string name="title_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="add_location">Add Location</string>
    <string name="please_tap_on_map_to_select_city">Please tap on map to select city</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="title_city_weather">City Weather</string>


    <string name="current_label">Today</string>
    <string name="wind_label">Wind</string>
    <string name="humidity_label">Humidity</string>

    <string name="search">Search</string>
    <string name="loading_weather">Loading your weather</string>
    <string name="wind_unit_label">%.0f km/hr</string>
    <string name="next_4_days_hourly">Next 4 Days/Hourly</string>
    <string name="search_weather_for_city">Search weather for city</string>
    <string name="metric">Metric</string>
    <string name="imperial">imperial</string>
    <string name="select_your_default_unit">Select your default unit</string>
</resources>